v11.035 - PixelExtraction, Plugin getStatistics, UIscale